# ingenieria-del-software-2

./: README.md
testing-lab/: slides.html
testing-lab/MVP/back/: .coverage  TESTING.md  app.db
testing-lab/MVP/back/scripts/: reset_user.py
testing-lab/MVP/back/src/core/: config.py  database.py
testing-lab/MVP/back/src/models/: user.py
testing-lab/MVP/back/src/services/: auth.py
testing-lab/MVP/back/src/static/: index.html
testing-lab/MVP/back/tests/integration/: conftest.py
testing-lab/MVP/back/tests/load/: load.js  smoke.js  stress.js  utils.js
testing-lab/MVP/back/tests/unit/: test_jwt.py  test_password.py
testing-lab/MVP/front/: TESTING.md  package.json  playwright.config.js
testing-lab/MVP/front/app/components/: AppHeader.vue  AppNavigation.vue
testing-lab/MVP/front/app/middleware/: auth.global.ts
testing-lab/MVP/front/app/pages/: login.vue
testing-lab/MVP/front/app/stores/: auth.ts
testing-lab/MVP/front/test-results/login-login-fallido-muestra-mensaje-de-error-chromium-headed/: error-context.md  video.webm
testing-lab/MVP/front/tests/e2e/: helpers.js  login.spec.js  register.spec.js
unit-test_e2e_lab/: slides.html
unit-test_e2e_lab/MVP/: dev.sh
unit-test_e2e_lab/MVP/back/: TESTING.md  app.db  pyproject.toml
unit-test_e2e_lab/MVP/back/src/: main.py
unit-test_e2e_lab/MVP/back/src/repositories/: user.py
unit-test_e2e_lab/MVP/back/src/routes/: auth.py
unit-test_e2e_lab/MVP/back/tests/: conftest.py
unit-test_e2e_lab/MVP/back/tests/integration/: test_auth.py
unit-test_e2e_lab/MVP/front/: nuxt.config.ts
(+2 files in other folders)
