[project]
name = "mvp-base"
version = "0.1.0"
description = ""
authors = [
    {name = "Edinson Mendoza",email = "emmendoza2794@gmail.com"}
]
package-mode = false
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<1.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn[standard] (>=0.41.0,<1.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "mangum (>=0.19.0,<1.0.0)",
    "pytz (>=2025.0,<2027.0)",
    "slowapi (>=0.1.9)",
    "python-jose[cryptography] (>=3.3.0)",
    "bcrypt (==4.0.1)",
]

[tool.poetry.group.dev.dependencies]
pytest-playwright = "^0.8.0"
freezegun = "^1.5.5"
httpx = "^0.28.1"

